feature/179: don't need to return http response, when it would be easier to return dto as usual